--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "cookie": "^0.5.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +24,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/node": "18.7.15",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
