--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/cookie": "^0.5.1",
     "@types/node": "18.7.15",
     "@types/react": "18.0.18",
