--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/nanoid": "^3.0.0",
     "cookie": "^0.5.0",
     "cuid": "^2.1.8",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-intersection-observer": "^9.4.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
     "uuid": "^9.0.0",
