Add some refactoring and poll result poll chart working

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@trpc/server": "^9.27.2",
     "@types/cuid": "^2.0.1",
     "@types/nanoid": "^3.0.0",
+    "@visx/group": "^2.10.0",
+    "@visx/shape": "^2.12.2",
+    "@visx/text": "^2.12.2",
     "cookie": "^0.5.0",
     "cuid": "^2.1.8",
     "moment": "^2.29.4",
